# masq

./: .gitignore  Cargo.toml
src/: lib.rs  logic.rs  main.rs  utils.rs
src/circuit/: cell_library.rs  circuit_graph.rs  circuit_impl.rs  dot.rs  from_netlist.rs  into_netlist.rs  masking.rs  mod.rs  node.rs
src/netlist/: json_netlist.rs  json_netlist_impl.rs  mod.rs  verilog.rs  verilog_chumsky.rs
src/netlist/verilog/: reader.rs  verilog.pest
src/netlist/verilog_lalrpop/: ast.rs  grammar.lalrpop  mod.rs  reader.rs
tests/Xoodyak/: mkPerm.v  mkPerm_netlist.json  mkPerm_netlist.v  mkperm.toml  mkperm_netlist.toml
tests/hdl/: custom_cells.lib
tests/hdl/simple/: simple_1.json  simple_1.toml  simple_1.v
