[package]
name = "masking"
version = "0.1.0"
edition = "2021"


[dependencies]
bimap = "0.6.2"
boolinator = "2.4.0"
daggy = { version = "0.8.0", features = ["stable_dag"] }
derive_builder = "0.12.0"
itertools = "0.10.5"
petgraph = "0.6.2"
regex = "1.7.1"
rustworkx-core = "0.12.1"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.91"
simple-error = "0.2.3"
strum = { version = "0.24.1", features = ["derive", "strum_macros"] }
sv-parser = "0.12.2"
thiserror = "1.0.38"
