[package]
name = "masquerade"
version = "0.1.0"
edition = "2021"


[dependencies]
ariadne = "0.1.5"
bimap = "0.6.2"
bitvec = "1.0.1"
boolinator = "2.4.0"
chumsky = "0.8.0"
daggy = { version = "0.8.0", features = ["stable_dag"] }
derive_builder = "0.12.0"
either = "1.8.0"
itertools = "0.10.5"
lalrpop-util = { version = "0.19.8", features = ["lexer"] }
log = "0.4.17"
nom = "7.1.3"
peg = { version = "0.8.1", features = ["trace"] }
pest = { version = "2.5.4", features = ["serde", "serde_json", "thiserror", "pretty-print"] }
pest_derive = "2.5.4"
petgraph = "0.6.2"
regex = "1.7.1"
rustworkx-core = "0.12.1"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.91"
simple-error = "0.2.3"
strum = { version = "0.24.1", features = ["derive", "strum_macros"] }
thiserror = "1.0.38"

[build-dependencies]
lalrpop = "0.19.8"
